updated astro.config.mjs serverless

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -20,7 +20,7 @@ type FooterContent = {
 
 const socialMediaData = [
   ...SOCIAL_MEDIA_DATA,
-  { icon: X, href: 'https://twitter.com/lynntheophene', name: 'twitter' }
+  { icon: X, href: 'https://X.com/Ghostbot08', name: 'X' }
 ]
 
 const FOOTER_CONTENTS: FooterContent[] = [
@@ -43,7 +43,7 @@ const FOOTER_CONTENTS: FooterContent[] = [
       { text: 'RSS', href: '/rss.xml', inNewTab: true },
       {
         text: 'Source code',
-        href: 'https://github.com/lynntheophene/lynntheophene.com.git',
+        href: 'https://github.com/lynntheophene/web.git',
         inNewTab: true
       }
     ]
