add a monkey dev gif for faulty github

--- a/src/pages/_components/bento/BentoItemGithubActivity/BentoItemGithubActivity.astro
+++ b/src/pages/_components/bento/BentoItemGithubActivity/BentoItemGithubActivity.astro
@@ -14,6 +14,10 @@ Astro.response.headers.set('Cache-Control', 'public, max-age=86400')
     <BentoGithubActivityChart {...data} client:only='react' />
   ) : (
     // TODO: handle error
-    <p>Something went wrong 😔</p>
+    <p>
+     <img src="/images/githuberror.gif" alt="Error GIF" style="vertical-align: middle; width: 40px;"/>
+      Something went wrong 😔, I'm working on it!
+    </p>
+
   )
 }
