--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -43,7 +43,7 @@ const FOOTER_CONTENTS: FooterContent[] = [
       { text: 'RSS', href: '/rss.xml', inNewTab: true },
       {
         text: 'Source code',
-        href: 'https://github.com/lynntheophene/web.git',
+        href: 'https://github.com/lynntheophene/web',
         inNewTab: true
       }
     ]
